2. Design Patterns/2. Behavioral/Strategy/Example/1. Duck Simulator/Bad/DuckSimulator_Bad_2/Duck.cs
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace DuckSimulator_Bad_2
{
    public abstract class Duck
    {
        public abstract void Display();

        public void Swim()
        {
            Console.WriteLine("<< kaczka plynie >>");
        }
    }
}
